Mon Dec 05 14:28:28 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* common/msvc_posix_wrapper.cc,common/safe.cc,net/tcpclient.cc:
	  Some fixes for warnings when cross-compiling with mingw; missing
	  includes to get declarations of functions in windows support
	  code, and change to use the windows SOCKET type to avoid a
	  signed/unsigned comparison warning in tcpclient.

Mon Dec 05 13:59:19 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/database.h: Remove bogus paragraph in
	  replace_document() documentation comment, cut and pasted from
	  delete_document() documentation comment.  (Fixes bug#579)

Wed Sep 14 05:05:36 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/quickstart.rst: Correct link which was to
	  quickstartsearch.cc.html but should be to quickstartindex.cc.html.

Wed Sep 14 05:02:10 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/flint_lock.cc: Fix comment typo.

Wed Sep 14 04:59:58 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/enquire.h: Clarify "sort by date" with BoolWeight
	  example.

Tue Aug 30 13:56:21 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/index.rst: Add link to apidoc.pdf.

Wed Aug 24 14:25:21 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* queryparser/queryparser.lemony: Fix memory leak (caught by existing
	  testcase queryparser1 when run under valgrind).

Wed Aug 24 14:13:24 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* queryparser/,tests/queryparsertest.cc,tests/termgentest.cc: Add
	  support for indexing and searching CJK text using n-grams.  Currently
	  this is only enabled if environmental variable XAPIAN_CJK_NGRAM is
	  set to a non-empty value.

Wed Aug 10 06:09:39 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Finalise 1.2.7.
