@@ -1,6 +1,6 @@
 /* safesysselect.h: #include <sys/select.h> with portability workarounds.
  *
- * Copyright (C) 2007 Olly Betts
+ * Copyright (C) 2007,2011 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -24,17 +24,36 @@
 # error You must #include <config.h> before #include "safesysselect.h"
 #endif
 
-#ifdef HAVE_SYS_SELECT_H
+#ifndef __WIN32__
+# ifdef HAVE_SYS_SELECT_H
 // According to POSIX 1003.1-2001.
-# include <sys/select.h>
-#else
+#  include <sys/select.h>
+# else
 // According to earlier standards.
-# include <sys/time.h>
-# include <sys/types.h>
-# include <unistd.h>
-#endif
+#  include <sys/time.h>
+#  include <sys/types.h>
+#  include <unistd.h>
+# endif
 
 // On Solaris FDSET uses memset but fails to prototype it.
-#include <cstring>
+# include <cstring>
+
+#else
+// Under __WIN32__, socket() returns the unsigned type SOCKET.  We can safely
+// assign that to an int (it'll be a non-negative fd or INVALID_SOCKET, which
+// will cast to -1 as an int), but when we use int in FD_SET, we get a warning
+// about comparing signed and unsigned, so we add a wrapper to cast the fd
+// argument of FD_SET to unsigned.
+
+// select() and FD_SET() are defined in <winsock2.h>:
+# include "safewinsock2.h"
+inline void xapian_FD_SET_(int fd, fd_set *set) {
+    FD_SET((unsigned)fd, set);
+}
+# ifdef FD_SET
+#  undef FD_SET
+# endif
+# define FD_SET(FD,SET) xapian_FD_SET_(FD,SET)
+#endif
 
 #endif // XAPIAN_INCLUDED_SAFESYSSELECT_H
