@@ -28,6 +28,7 @@
 
 #include "safeerrno.h"
 #include "safefcntl.h"
+#include "safesysselect.h"
 #include "socket_utils.h"
 
 #include <cmath>
@@ -37,7 +38,6 @@
 # include <netinet/in.h>
 # include <netinet/tcp.h>
 # include <sys/socket.h>
-# include "safesysselect.h"
 #endif
 
 using namespace std;
@@ -64,13 +64,8 @@ TcpClient::open_socket(const std::string & hostname, int port,
 		);
     }
 
-#ifdef __WIN32__
-    SOCKET socketfd = socket(PF_INET, SOCK_STREAM, 0);
-    if (socketfd == INVALID_SOCKET) {
-#else
     int socketfd = socket(PF_INET, SOCK_STREAM, 0);
     if (socketfd < 0) {
-#endif
 	throw Xapian::NetworkError("Couldn't create socket", socket_errno());
     }
 
